# wechatwork-tool

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
WeChatWorkTool/: WXBizMsgCrypt3.py  admin.py  apps.py  models.py  serializers.py  tool.py  urls.py  views.py
WeChatWorkTool/migrations/: 0001_initial.py  0002_accesstoken_appid.py
